--- a/public/styles/page/paymentWidget.module.scss
+++ b/public/styles/page/paymentWidget.module.scss
@@ -9,7 +9,8 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	width: 500px;
+	max-width: 500px;
+	width: 90%;
 }
 
 .payment-amount-label {
