--- a/public/styles/page/quote.module.scss
+++ b/public/styles/page/quote.module.scss
@@ -2,6 +2,7 @@
 
 @use 'public/styles/foundation/common';
 @use 'public/styles/page/lib/base';
+@use 'public/styles/page/lib/form';
 
 /* ----------------------- STYLES ----------------------------- */
 
@@ -253,4 +254,109 @@
 	}
 
 	flex: 1;
+}
+
+.terms-accepted-section {
+	margin: {
+		top: 25px;
+		bottom: 25px;
+		left: auto;
+		right: auto;
+	}
+
+	padding: {
+		top: 5px;
+		bottom: 5px;
+		left: 10px;
+		right: 10px;
+	}
+
+	border: {
+		width: 2px;
+		color: common.$colors-silver;
+		style: solid;
+		radius: 15px;
+	}
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	max-width: 500px;
+
+	@include common.responsive-portrait-phone-only() {
+		margin-left: 10px;
+		margin-right: 10px;
+	}
+}
+
+.terms-accepted-checkbox {
+	@extend %input-checkbox;
+}
+
+.terms-accepted-label {
+	@include common.fonts-define-font($family: Avenir Heavy) {
+		letter-spacing: 0.3px;
+		color: common.$colors-low-black;
+	}
+}
+
+.terms-and-conditions-link {
+	color: common.$colors-logo-blue;
+	cursor: pointer;
+	text-decoration: underline;
+}
+
+.terms-and-conditions {
+	margin: {
+		left: 5%;
+		right: 5%;
+	}
+}
+
+.print-iframe {
+	display: none;
+}
+
+.print-button {
+	@include form.small-button($bgColor: common.$colors-logo-blue, $width: 100px);
+}
+
+.print-icon {
+	margin-left: 3px;
+}
+
+.payment-section {
+	margin: {
+		top: 20px;
+		bottom: 20px;
+	}
+
+	display: flex;
+	justify-content: center;
+	position: relative;
+}
+
+.payment-section-overlay {
+	position: absolute;
+	background-color: rgba(10 10 10 / 25%);
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+}
+
+.payment-section-overlay-notice {
+	@include common.fonts-define-font($family: Comfortaa);
+
+	border: {
+		radius: 15px;
+		width: 0.25px;
+		style: solid;
+		color: common.$colors-slate-gray;
+	}
+
+	margin-top: 20px;
+	padding: 30px;
+	background-color: common.$colors-white;
 }
