--- a/public/styles/page/productPage.module.scss
+++ b/public/styles/page/productPage.module.scss
@@ -55,6 +55,8 @@
 	justify-content: center;
 }
 
+/* TODO - Figure out how to make product blocks fade onto the page once the user scrolls down to the point where it should be visible */
+
 .product-block {
 	display: flex;
 	align-items: center;
