--- a/public/styles/page/components.module.scss
+++ b/public/styles/page/components.module.scss
@@ -940,3 +940,50 @@
 	color: common.$colors-black;
 	background-color: common.$colors-white;
 }
+
+/* ----------------------- OPTIONSET ----------------------------- */
+
+// Styling for customized button sets
+.option-set-container {
+	margin: {
+		top: 15px;
+		bottom: 15px;
+	}
+
+	cursor: pointer;
+
+	& > label, & > a {
+		@include common.animations-transition-settings($property: all, $duration: 0.5s);
+
+		border: {
+			width: 1px;
+			style: solid;
+			color: common.$colors-black;
+		}
+
+		padding: 10px;
+		background-color: common.$colors-silver;
+		color: common.$colors-black;
+		cursor: inherit;
+
+		&:first-of-type {
+			border-top-left-radius: 10px;
+			border-bottom-left-radius: 10px;
+		}
+
+		&:last-of-type {
+			border-top-right-radius: 10px;
+			border-bottom-right-radius: 10px;
+		}
+
+		&.selected-option-set {
+			background-color: common.$colors-slate-gray;
+			color: common.$colors-white;
+		}
+	}
+
+	&.disabled-option-set {
+		cursor: default;
+		opacity: 0.4;
+	}
+}
