--- a/public/styles/page/notes.module.scss
+++ b/public/styles/page/notes.module.scss
@@ -71,7 +71,7 @@
 }
 
 .note-prop-field-input {
-	@extend %small-input-control;
+	@extend %medium-input-control;
 }
 
 .note-prop-field-submit-button {
