--- a/public/styles/page/lib/_form.scss
+++ b/public/styles/page/lib/_form.scss
@@ -12,7 +12,7 @@
  */
 @mixin primary-button($bgColor: common.$colors-steel-blue, $width: 100%, $isSquare: false) {
 	@include common.animations-transition-settings($property: all, $duration: 0.25s);
-	@include common.fonts-define-font($size: common.$fonts-section, $family: Roboto Mono);
+	@include common.fonts-define-font($size: common.$fonts-section, $family: Avenir Light);
 
 	border: {
 		width: 1px;
@@ -53,7 +53,7 @@
 		width: 0.5px;
 		style: solid;
 		color: common.$colors-slate-gray;
-		radius: 0.5px;
+		radius: 1.5px;
 	}
 
 	padding: {
@@ -61,7 +61,7 @@
 		bottom: 2px;
 		left: 5px;
 		right: 5px;
-	};
+	}
 
 	width: $width;
 	color: common.$colors-low-black;
@@ -268,7 +268,6 @@
 	@include common.fonts-define-font($size: common.$fonts-secondary, $family: Poppins);
 
 	height: 2em;
-	max-width: 400px;
 	color: common.$colors-low-black;
 	box-sizing: border-box;
 
