--- a/public/styles/page/quote.module.scss
+++ b/public/styles/page/quote.module.scss
@@ -375,6 +375,13 @@
 	width: 100%;
 	display: flex;
 	align-items: center;
+
+	&-center {
+		@extend .invoice-body-row;
+		@include common.fonts-define-font($family: Avenir Heavy);
+
+		justify-content: center;
+	}
 }
 
 .invoice-body-label {
